test/tests/operators/spawn/parallel_invalid.txt
error: `parallel` must be at least 1
 --> tests/operators/spawn/parallel_invalid.tql:5:16
  |
5 | spawn parallel=0 {
  |                ^ 
  |
